# poc_image_audio_gen

./: README.md  requirements.txt  requirements_newer.txt
tti_poc/: image_dim_poc.py  image_poc.py  image_test_params_poc.py  image_test_story_images_from_chatgpt.py
tts_poc/: check_customization.py  piper_speech_poc_all_voice_cpu.py  piper_speech_poc_cpu.py  piper_speech_poc_final_2_cpu_narration_script.py  speech_poc.py
tts_poc/all_voices_test_basic/: BEST_VOICE.md
tts_poc/all_voices_test_paragraph_with_punctuation_text_formatting/: BEST_VOICE.md
tts_poc/all_voices_test_paragraph_with_punctuation_text_formatting_increase_speed_natural_variation/: BEST_VOICE.md
tts_poc/scripts/: download_all_gb_voices.sh  download_all_us_voices.sh
tts_poc/text/: narration_script.txt
tts_timing_image_poc/reliable_build/: check_overlay.py  generate_video.py  generate_video_v2.py  main.py  piper_faster_whisper_poc_cpu.py  piper_sdxl_poc.py  preprocess_overlay.py  pyproject.toml  script_prompts.csv
